weechat: update irc_.conf

--- a/.weechat/irc_.conf
+++ b/.weechat/irc_.conf
@@ -6,15 +6,17 @@
 color_nicks_in_server_messages = on
 color_pv_nick_like_channel = on
 display_away = local
-display_channel_modes = off
 display_ctcp_blocked = on
 display_ctcp_reply = on
 display_ctcp_unknown = on
-display_nick_modes = off
 display_old_topic = off
 hide_nickserv_pwd = on
 highlight_tags = "irc_privmsg,irc_notice"
+item_channel_modes = off
+item_channel_modes_hide_key = off
 item_display_server = buffer_plugin
+item_nick_modes = on
+item_nick_prefix = on
 msgbuffer_fallback = current
 nick_completion_smart = speakers
 nick_prefix = ""
