--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -18,6 +18,7 @@ perl.chanmon.freenode.#lojban = "on"
 perl.chanmon.freenode.#vimperator = "on"
 perl.chanmon.nick_prefix = "<"
 perl.chanmon.nick_suffix = ">"
+perl.chanmon.oftc.#awesome = "on"
 perl.chanmon.short_names = "on"
 perl.chanmon.show_aways = "off"
 perl.check_license = "on"
