some more channel monitoring

--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -7,18 +7,26 @@ fifo.fifo = "on"
 lua.check_license = "on"
 perl.chanmon.alignment = "channel"
 perl.chanmon.bitlbee.&bitlbee = "on"
+perl.chanmon.coldfront.#achron = "on"
 perl.chanmon.color_buf = "on"
 perl.chanmon.dynamic = "on"
+perl.chanmon.foonetic.#aegislore = "on"
 perl.chanmon.foonetic.#curseofsteel = "on"
 perl.chanmon.foonetic.#xkcd = "on"
 perl.chanmon.foonetic.#xkcd-signal = "on"
 perl.chanmon.freenode.#anime = "on"
 perl.chanmon.freenode.#archlinux = "on"
+perl.chanmon.freenode.#archlinux-offtopic = "off"
 perl.chanmon.freenode.#lojban = "on"
+perl.chanmon.freenode.#newsbeuter = "on"
+perl.chanmon.freenode.#vim = "on"
 perl.chanmon.freenode.#vimperator = "on"
 perl.chanmon.nick_prefix = "<"
 perl.chanmon.nick_suffix = ">"
 perl.chanmon.oftc.#awesome = "on"
+perl.chanmon.oftc.#heresy = "on"
+perl.chanmon.rizon.#dlqct = "on"
+perl.chanmon.rizon.#doremi = "on"
 perl.chanmon.short_names = "on"
 perl.chanmon.show_aways = "off"
 perl.check_license = "on"
