--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -227,13 +227,15 @@ buffer = "irc;foonetic.#xkcd-signal;22"
 buffer = "irc;coldfront.#achron;23"
 buffer = "irc;foonetic.#aegislore;24"
 buffer = "irc;freenode.#archlinux-offtopic;25"
+buffer = "irc;bitlbee.joel;26"
+buffer = "irc;bitlbee.damy;27"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
 window = "4;3;0;0;irc;oftc.#heresy"
 window = "5;3;0;0;irc;oftc.#awesome"
 window = "6;2;50;0;-;-"
-window = "7;6;0;0;irc;freenode.#vimperator"
+window = "7;6;0;0;irc;freenode.#archlinux-offtopic"
 window = "8;6;0;0;irc;freenode.#archlinux"
 window = "9;1;50;1;-;-"
 window = "10;9;50;0;-;-"
