weechat: don't display day changed messages

--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -16,7 +16,7 @@ buffer_notify_default = highlight
 buffer_time_format = "%H:%M"
 color_nicks_number = 8
 color_real_white = off
-day_change = on
+day_change = off
 day_change_time_format = "%a, %d %b %Y"
 highlight = ""
 hline_char = "-"
