--- a/.sysconfig/desktop/init.conf
+++ b/.sysconfig/desktop/init.conf
@@ -79,6 +79,10 @@ syshalt(){
     ## Terminate all processes
     terminate_all
 
+    ## Unmount encrypted filesystems
+    encMount umount data
+    encMount umount home
+
     ## Unmount filesystems
     stopd filesystem
 
