weechat: add layout alias

--- a/.weechat/irc_.conf
+++ b/.weechat/irc_.conf
@@ -161,7 +161,7 @@ foonetic.realname
 foonetic.local_hostname
 foonetic.command
 foonetic.command_delay
-foonetic.autojoin = "#xkcd,#xkcd-signal,#curseofsteel,#aegislore"
+foonetic.autojoin = "#xkcd,#xkcd-signal"
 foonetic.autorejoin
 foonetic.autorejoin_delay
 rizon.addresses = "irc.rizon.net"
