--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -7,6 +7,9 @@ fifo.fifo = "on"
 lua.check_license = "on"
 perl.chanmon.alignment = "channel"
 perl.chanmon.bitlbee.&bitlbee = "on"
+perl.chanmon.bitlbee.&chat_000 = "on"
+perl.chanmon.bitlbee.&chat_001 = "on"
+perl.chanmon.bitlbee.&chat_002 = "on"
 perl.chanmon.coldfront.#achron = "on"
 perl.chanmon.color_buf = "on"
 perl.chanmon.dynamic = "on"
@@ -21,6 +24,7 @@ perl.chanmon.freenode.#lojban = "on"
 perl.chanmon.freenode.#newsbeuter = "on"
 perl.chanmon.freenode.#vim = "on"
 perl.chanmon.freenode.#vimperator = "on"
+perl.chanmon.irc.quakenet.org.#st4gr5 = "on"
 perl.chanmon.nick_prefix = "<"
 perl.chanmon.nick_suffix = ">"
 perl.chanmon.oftc.#awesome = "on"
