newsbeuter: add oatmeal and basic instructions

--- a/.weechat/alias.conf
+++ b/.weechat/alias.conf
@@ -15,11 +15,11 @@ J = "join"
 K = "kick"
 KB = "kickban"
 LEAVE = "part"
-m = "/q -server bitlbee"
+m = "/query -server bitlbee"
 msg = "q"
 MUB = "unban *"
 N = "names"
-Q = "query"
+q = "/query -server bitlbee"
 REDRAW = "window refresh"
 SAY = "msg *"
 SIGNOFF = "quit"
