replace vifm with ranger

--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -29,6 +29,7 @@ perl.chanmon.nick_prefix = "<"
 perl.chanmon.nick_suffix = ">"
 perl.chanmon.oftc.#awesome = "on"
 perl.chanmon.oftc.#heresy = "on"
+perl.chanmon.quakenet.#st4gr5 = "on"
 perl.chanmon.rizon.#dlqct = "on"
 perl.chanmon.rizon.#doremi = "on"
 perl.chanmon.short_names = "on"
