awesome,tmux: start a ranger instance in tmux, display it on startup

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,6 +31,7 @@ bind r attach-session -t mpd
 bind l attach-session -t dl
 bind / attach-session -t mt
 bind @ attach-session -t rd
+bind \ attach-session -t rn
 
 bind t next-window
 bind n next-window
@@ -45,3 +46,4 @@ new -d -s mpd ncmpcpp
 new -d -s dl rtor
 new -d -s mt mutt
 new -d -s rd cortex
+new -d -s rn "ranger /data"
