tmux: set DISPLAY

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,6 +39,9 @@ bind h new-window
 
 bind k confirm-before kill-window
 
+# Set DISPLAY
+set-environment -g DISPLAY :0.1
+
 # Create all windows
 new -d -s irc weechat-curses
 new -d -s rss newsbeuter
