--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,8 @@ set -g base-index 1
 # Vi keys
 set -g status-keys vi
 setw -g mode-keys vi
+# Remain on exit
+setw -g remain-on-exit on
 
 ## Bindings
 # Use C-t as prefix
