tmux: name sessions more sanely

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,13 +27,13 @@ unbind n
 unbind h
 unbind k
 
-bind g attach-session -t irc
-bind c attach-session -t rss
-bind r attach-session -t mpd
-bind l attach-session -t dl
-bind / attach-session -t mt
-bind @ attach-session -t rd
-bind \ attach-session -t rn
+bind g attach-session -t weechat
+bind c attach-session -t newsbeuter
+bind r attach-session -t ncmpcpp
+bind l attach-session -t rtorrent
+bind / attach-session -t mutt
+bind @ attach-session -t cortex
+bind \ attach-session -t ranger
 
 bind t next-window
 bind n next-window
@@ -45,10 +45,10 @@ bind k confirm-before kill-window
 set-environment -g DISPLAY :0.1
 
 # Create all windows
-new -d -s irc weechat-curses
-new -d -s rss newsbeuter
-new -d -s mpd ncmpcpp
-new -d -s dl rtor
-new -d -s mt mutt
-new -d -s rd cortex
-new -d -s rn "ranger /data"
+new -d -s weechat weechat-curses
+new -d -s newsbeuter newsbeuter
+new -d -s ncmpcpp ncmpcpp
+new -d -s rtorrent rtor
+new -d -s mutt mutt
+new -d -s cortex cortex
+new -d -s ranger "ranger /data"
