--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,8 @@ set -g base-index 1
 set -g status-keys vi
 setw -g mode-keys vi
 # Remain on exit
-setw -g remain-on-exit on
+#setw -g remain-on-exit on
+### Until this stops dying randomly, don't use it
 
 ## Bindings
 # Use C-t as prefix
@@ -45,7 +46,8 @@ bind k confirm-before kill-window
 set-environment -g DISPLAY :0.1
 
 # Create all windows
-new -d -s weechat weechat-curses
+#new -d -s weechat weechat-curses
+new -d -s weechat bash
 new -d -s newsbeuter newsbeuter
 new -d -s ncmpcpp ncmpcpp
 new -d -s rtorrent rtor
