tmux: fix weechat-curses

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,8 +46,7 @@ bind k confirm-before kill-window
 set-environment -g DISPLAY :0.1
 
 # Create all windows
-#new -d -s weechat weechat-curses
-new -d -s weechat bash
+new -d -s weechat weechat-curses
 new -d -s newsbeuter newsbeuter
 new -d -s ncmpcpp ncmpcpp
 new -d -s rtorrent rtor
