--- a/.weechat/irc_.conf
+++ b/.weechat/irc_.conf
@@ -101,7 +101,7 @@ freenode.realname
 freenode.local_hostname
 freenode.command
 freenode.command_delay
-freenode.autojoin = "#lojban,#archlinux,#archlinux-offtopic,#vim,#anime,#vimperator"
+freenode.autojoin = "#lojban,#archlinux,#archlinux-offtopic,#vim,#anime,#vimperator,#python"
 freenode.autorejoin
 freenode.autorejoin_delay
 coldfront.addresses = "irc.coldfront.net"
