--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -22,6 +22,7 @@ perl.chanmon.freenode.#archlinux = "on"
 perl.chanmon.freenode.#archlinux-offtopic = "off"
 perl.chanmon.freenode.#lojban = "on"
 perl.chanmon.freenode.#newsbeuter = "on"
+perl.chanmon.freenode.#python = "on"
 perl.chanmon.freenode.#vim = "on"
 perl.chanmon.freenode.#vimperator = "on"
 perl.chanmon.irc.quakenet.org.#st4gr5 = "on"
