--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -151,7 +151,7 @@ input.conditions = ""
 input.filling_left_right = vertical
 input.filling_top_bottom = horizontal
 input.hidden = off
-input.items = "[hotlist],buffer_name>,[][input_paste],+(away),[input_search],input_text"
+input.items = "[hotlist],[lag],scroll,buffer_name>,[][input_paste],+(away),[input_search],input_text"
 input.position = bottom
 input.priority = 1000
 input.separator = off
