--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -16,6 +16,7 @@ buffer_notify_default = highlight
 buffer_time_format = "%H:%M"
 color_nicks_number = 8
 color_real_white = off
+command_chars = ""
 day_change = off
 day_change_time_format = "%a, %d %b %Y"
 highlight = ""
@@ -45,6 +46,7 @@ prefix_network = "--"
 prefix_quit = "<--"
 prefix_suffix = "|"
 read_marker = dotted-line
+read_marker_always_show = off
 save_config_on_exit = off
 save_layout_on_exit = none
 scroll_amount = 3
@@ -226,13 +228,19 @@ buffer = "irc;oftc.#heresy;21"
 buffer = "irc;foonetic.#xkcd-signal;22"
 buffer = "irc;coldfront.#achron;23"
 buffer = "irc;freenode.#archlinux-offtopic;24"
+buffer = "irc;server.quakenet;25"
+buffer = "irc;quakenet.q@cserve.quakenet.org;26"
+buffer = "irc;quakenet.#st4gr5;27"
+buffer = "irc;freenode.#python;28"
+buffer = "irc;bitlbee.joelm;29"
+buffer = "irc;bitlbee.gerben;30"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
 window = "4;3;0;0;irc;oftc.#heresy"
 window = "5;3;0;0;irc;oftc.#awesome"
 window = "6;2;50;0;-;-"
-window = "7;6;0;0;irc;freenode.#archlinux-offtopic"
+window = "7;6;0;0;irc;freenode.#python"
 window = "8;6;0;0;irc;freenode.#archlinux"
 window = "9;1;50;1;-;-"
 window = "10;9;50;0;-;-"
@@ -258,6 +266,7 @@ perl.highmon = none
 
 [filter]
 irc_smart = on;*;irc_smart_filter;*
+irc_mode = on;*;*;Mode #.* \[
 
 [key]
 ctrl-? = "/input delete_previous_char"
