--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -14,13 +14,13 @@ weechat_slogan = "the geekiest chat client!"
 [look]
 buffer_notify_default = highlight
 buffer_time_format = "%H:%M"
-color_nicks_number = 8
+color_nicks_number = 6
 color_real_white = off
 command_chars = ""
 day_change = off
 day_change_time_format = "%a, %d %b %Y"
 highlight = ""
-hline_char = "-"
+hline_char = ""
 hotlist_names_count = 3
 hotlist_names_length = 0
 hotlist_names_level = 8
@@ -33,19 +33,19 @@ jump_previous_buffer_when_closing = on
 nickmode = on
 nickmode_empty = off
 paste_max_lines = 3
-prefix_action = " *"
+prefix_action = "━━"
 prefix_align = right
-prefix_align_max = 0
+prefix_align_max = 10
 prefix_align_more = on
 prefix_buffer_align = right
-prefix_buffer_align_max = 0
+prefix_buffer_align_max = 10
 prefix_buffer_align_more = on
-prefix_error = "=!="
-prefix_join = "-->"
-prefix_network = "--"
-prefix_quit = "<--"
-prefix_suffix = "|"
-read_marker = dotted-line
+prefix_error = "━‼━"
+prefix_join = "→"
+prefix_network = "━━"
+prefix_quit = "←"
+prefix_suffix = "│"
+read_marker = line
 read_marker_always_show = off
 save_config_on_exit = off
 save_layout_on_exit = none
@@ -64,18 +64,18 @@ chat_channel = white
 chat_delimiters = green
 chat_highlight = yellow
 chat_highlight_bg = magenta
-chat_host = cyan
+chat_host = magenta
 chat_nick = lightcyan
-chat_nick_color01 = cyan
-chat_nick_color02 = magenta
+chat_nick_color01 = lightgreen
+chat_nick_color02 = lightmagenta
 chat_nick_color03 = green
 chat_nick_color04 = brown
 chat_nick_color05 = lightblue
 chat_nick_color06 = lightcyan
-chat_nick_color07 = lightmagenta
-chat_nick_color08 = lightgreen
-chat_nick_color09 = lightgreen
-chat_nick_color10 = lightblue
+chat_nick_color07 = white
+chat_nick_color08 = white
+chat_nick_color09 = white
+chat_nick_color10 = white
 chat_nick_other = cyan
 chat_nick_self = white
 chat_prefix_action = white
@@ -91,12 +91,12 @@ chat_read_marker_bg = default
 chat_server = brown
 chat_text_found = yellow
 chat_text_found_bg = lightmagenta
-chat_time = default
-chat_time_delimiters = brown
+chat_time = cyan
+chat_time_delimiters = cyan
 chat_value = cyan
 input_actions = lightgreen
 input_text_not_found = red
-nicklist_away = cyan
+nicklist_away = brown
 nicklist_group = green
 nicklist_more = lightmagenta
 nicklist_prefix1 = lightgreen
