weechat: update go.py

--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -20,6 +20,7 @@ perl.chanmon.foonetic.#xkcd-signal = "on"
 perl.chanmon.freenode.#anime = "on"
 perl.chanmon.freenode.#archlinux = "on"
 perl.chanmon.freenode.#archlinux-offtopic = "off"
+perl.chanmon.freenode.#intovps = "on"
 perl.chanmon.freenode.#lojban = "on"
 perl.chanmon.freenode.#newsbeuter = "on"
 perl.chanmon.freenode.#python = "on"
@@ -44,6 +45,9 @@ perl.highmon.nick_prefix = "<"
 perl.highmon.nick_suffix = ">"
 perl.highmon.short_names = "on"
 python.check_license = "on"
+python.colorize_nicks.blacklist_channels = ""
+python.colorize_nicks.blacklist_nicks = "so,root"
+python.colorize_nicks.min_nick_length = "2"
 python.go.color_name = "black,cyan"
 python.go.color_name_highlight = "red,cyan"
 python.go.color_name_highlight_selected = "red,brown"
