weechat: add identica plugin
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.weechat/irc_.conf
+++ b/.weechat/irc_.conf
@@ -24,6 +24,7 @@ nick_suffix = ""
 notice_as_pv = auto
 open_channel_near_server = off
 open_pv_near_server = off
+part_closes_buffer = off
 raw_messages = 256
 server_buffer = independent
 show_away_once = on
@@ -48,11 +49,12 @@ away_check = 5
 away_check_max_nicks = 25
 colors_receive = on
 colors_send = on
+connection_timeout = 60
 default_msg_part = ""
 default_msg_quit = ""
 lag_check = 60
 lag_disconnect = 5
-lag_min_show = 1
+lag_min_show = 2
 send_unknown_commands = off
 
 [msgbuffer]
@@ -77,6 +79,10 @@ nicks = "GGLucas,GGLucas_"
 password = ""
 proxy = ""
 realname = "Lucas de Vries"
+sasl_mechanism = plain
+sasl_password = ""
+sasl_timeout = 15
+sasl_username = ""
 ssl = off
 ssl_cert = ""
 ssl_dhkey_size = 2048
@@ -92,6 +98,10 @@ freenode.ssl_cert
 freenode.ssl_dhkey_size
 freenode.ssl_verify
 freenode.password
+freenode.sasl_mechanism
+freenode.sasl_username
+freenode.sasl_password
+freenode.sasl_timeout
 freenode.autoconnect
 freenode.autoreconnect
 freenode.autoreconnect_delay
@@ -101,7 +111,7 @@ freenode.realname
 freenode.local_hostname
 freenode.command
 freenode.command_delay
-freenode.autojoin = "#lojban,#archlinux,#archlinux-offtopic,#vim,#anime,#vimperator,#python"
+freenode.autojoin = "#lojban,#archlinux,#archlinux-offtopic,#vim,#newsbeuter,#anime,#vimperator,#python,#intovps"
 freenode.autorejoin
 freenode.autorejoin_delay
 coldfront.addresses = "irc.coldfront.net"
@@ -112,6 +122,10 @@ coldfront.ssl_cert
 coldfront.ssl_dhkey_size
 coldfront.ssl_verify
 coldfront.password
+coldfront.sasl_mechanism
+coldfront.sasl_username
+coldfront.sasl_password
+coldfront.sasl_timeout
 coldfront.autoconnect
 coldfront.autoreconnect
 coldfront.autoreconnect_delay
@@ -132,6 +146,10 @@ oftc.ssl_cert
 oftc.ssl_dhkey_size
 oftc.ssl_verify
 oftc.password
+oftc.sasl_mechanism
+oftc.sasl_username
+oftc.sasl_password
+oftc.sasl_timeout
 oftc.autoconnect
 oftc.autoreconnect
 oftc.autoreconnect_delay
@@ -152,6 +170,10 @@ foonetic.ssl_cert
 foonetic.ssl_dhkey_size
 foonetic.ssl_verify
 foonetic.password
+foonetic.sasl_mechanism
+foonetic.sasl_username
+foonetic.sasl_password
+foonetic.sasl_timeout
 foonetic.autoconnect
 foonetic.autoreconnect
 foonetic.autoreconnect_delay
@@ -172,6 +194,10 @@ rizon.ssl_cert
 rizon.ssl_dhkey_size
 rizon.ssl_verify
 rizon.password
+rizon.sasl_mechanism
+rizon.sasl_username
+rizon.sasl_password
+rizon.sasl_timeout
 rizon.autoconnect
 rizon.autoreconnect
 rizon.autoreconnect_delay
@@ -192,6 +218,10 @@ bitlbee.ssl_cert
 bitlbee.ssl_dhkey_size
 bitlbee.ssl_verify
 bitlbee.password
+bitlbee.sasl_mechanism
+bitlbee.sasl_username
+bitlbee.sasl_password
+bitlbee.sasl_timeout
 bitlbee.autoconnect
 bitlbee.autoreconnect
 bitlbee.autoreconnect_delay
@@ -204,3 +234,27 @@ bitlbee.command_delay
 bitlbee.autojoin
 bitlbee.autorejoin
 bitlbee.autorejoin_delay
+quakenet.addresses = "irc.quakenet.org"
+quakenet.proxy
+quakenet.ipv6
+quakenet.ssl
+quakenet.ssl_cert
+quakenet.ssl_dhkey_size
+quakenet.ssl_verify
+quakenet.password
+quakenet.sasl_mechanism
+quakenet.sasl_username
+quakenet.sasl_password
+quakenet.sasl_timeout
+quakenet.autoconnect
+quakenet.autoreconnect
+quakenet.autoreconnect_delay
+quakenet.nicks
+quakenet.username
+quakenet.realname
+quakenet.local_hostname
+quakenet.command = "/query q@cserve.quakenet.org auth GGLucas ###; /join #st4gr5"
+quakenet.command_delay
+quakenet.autojoin = ""
+quakenet.autorejoin
+quakenet.autorejoin_delay
