--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -56,6 +56,22 @@ python.go.color_number = "yellow,magenta"
 python.go.color_number_selected = "yellow,red"
 python.go.message = "Go: "
 python.go.short_name = "on"
+python.identica.channel = "bitlbee.identica"
+python.identica.group_color = "lightblue"
+python.identica.group_color_identifier = "white"
+python.identica.group_re = "(!)([a-zA-Z0-9]+([ :.]|$))"
+python.identica.hashtag_color = "lightgreen"
+python.identica.hashtag_color_identifier = "white"
+python.identica.hashtag_re = "(#)([a-zA-Z0-9]+([ :.]|$))"
+python.identica.me = "^(?P<update>\w+)(?P<separator>\W+?)(?P<username>\w+): \/me (?P<dent>.+) \[[0-9]+\]$"
+python.identica.nick_color = "lightmagenta"
+python.identica.nick_color_identifier = "white"
+python.identica.nick_re = "(@)([a-zA-Z0-9]+([ :.]|$))"
+python.identica.password = ""
+python.identica.re = "^(?P<update>\w+)(?P<separator>\W+?)(?P<username>\w+): (?P<dent>.+) \[[0-9]+\]$"
+python.identica.scheme = "https"
+python.identica.service = "identi.ca"
+python.identica.username = ""
 python.toggle_nicklist.action = "show"
 python.toggle_nicklist.buffers = "irc.bitlbee.&bitlbee"
 ruby.check_license = "on"
