--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -9,7 +9,6 @@ command_after_plugins = ""
 command_before_plugins = ""
 display_logo = on
 display_version = on
-weechat_slogan = "the geekiest chat client!"
 
 [look]
 buffer_notify_default = highlight
@@ -98,7 +97,7 @@ input_actions = lightgreen
 input_text_not_found = red
 nicklist_away = brown
 nicklist_group = green
-nicklist_more = lightmagenta
+nicklist_offline = blue
 nicklist_prefix1 = lightgreen
 nicklist_prefix2 = lightmagenta
 nicklist_prefix3 = yellow
@@ -232,8 +231,8 @@ buffer = "irc;server.quakenet;25"
 buffer = "irc;quakenet.q@cserve.quakenet.org;26"
 buffer = "irc;quakenet.#st4gr5;27"
 buffer = "irc;freenode.#python;28"
-buffer = "irc;bitlbee.joelm;29"
-buffer = "irc;bitlbee.gerben;30"
+buffer = "irc;freenode.#intovps;29"
+buffer = "irc;bitlbee.identica;30"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
@@ -244,15 +243,17 @@ window = "7;6;0;0;irc;freenode.#python"
 window = "8;6;0;0;irc;freenode.#archlinux"
 window = "9;1;50;1;-;-"
 window = "10;9;50;0;-;-"
-window = "11;10;0;0;irc;foonetic.#xkcd"
+window = "11;10;0;0;irc;freenode.#anime"
 window = "12;10;20;0;-;-"
 window = "13;12;0;0;irc;bitlbee.&bitlbee"
-window = "14;12;20;1;-;-"
-window = "15;14;0;0;perl;chanmon"
-window = "16;14;0;0;perl;highmon"
-window = "17;9;50;0;-;-"
-window = "18;17;0;0;irc;foonetic.#xkcd-signal"
-window = "19;17;0;0;irc;freenode.#anime"
+window = "14;12;25;1;-;-"
+window = "15;14;25;1;-;-"
+window = "16;15;0;0;perl;chanmon"
+window = "17;15;0;0;perl;highmon"
+window = "18;14;0;0;irc;bitlbee.identica"
+window = "19;9;50;0;-;-"
+window = "20;19;0;0;irc;foonetic.#xkcd"
+window = "21;19;0;0;irc;foonetic.#xkcd-signal"
 
 [notify]
 highmon = none
@@ -267,6 +268,7 @@ perl.highmon = none
 [filter]
 irc_smart = on;*;irc_smart_filter;*
 irc_mode = on;*;*;Mode #.* \[
+redent = on;irc.bitlbee.identica;*;\(\( \|^\)R[TD]\([: ]\|$\)\|♻\|♺\)
 
 [key]
 ctrl-? = "/input delete_previous_char"
