--- a/.weechat/alias.conf
+++ b/.weechat/alias.conf
@@ -1,5 +1,5 @@
 #
-# alias.conf -- weechat v0.3.2-dev
+# alias.conf -- weechat v0.3.2-rc1
 #
 
 [cmd]
@@ -19,7 +19,7 @@ m = "/query -server bitlbee"
 msg = "q"
 MUB = "unban *"
 N = "names"
-q = "/query -server bitlbee"
+q = "/query"
 REDRAW = "window refresh"
 SAY = "msg *"
 SIGNOFF = "quit"
