--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -1,5 +1,5 @@
 #
-# plugins.conf -- weechat v0.3.2-dev
+# plugins.conf -- weechat v0.3.2-rc1
 #
 
 [var]
@@ -68,7 +68,7 @@ python.identica.nick_color = "lightmagenta"
 python.identica.nick_color_identifier = "white"
 python.identica.nick_re = "(@)([a-zA-Z0-9]+([ :.]|$))"
 python.identica.password = ""
-python.identica.re = "^(?P<update>\w+)(?P<separator>\W+?)(?P<username>\w+): (?P<dent>.+) \[[0-9]+\]$"
+python.identica.re = "^(\[[0-9][0-9]:[0-9][0-9]\] )?(?P<update>\w+)(?P<separator>\W+?)(?P<username>\w+): (?P<dent>.+) \[[0-9]+\]$"
 python.identica.scheme = "https"
 python.identica.service = "identi.ca"
 python.identica.username = ""
