--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -178,12 +178,12 @@ loadYoutube = function (tab)
 {
     let doc = tabs.getTab(tab-1).linkedBrowser.contentDocument;
     let player = doc.getElementById("movie_player");
-    let base = doc.getElementById("baseDiv");
+    let base = doc.getElementById("watch-video");
 
     if (base)
     {
         // Wide mode by default
-        base.className = (base.className || "")+" watch-wide-mode"
+        base.className = (base.className || "")+" wide"
     }
 
     if (player)
