--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v0.3.2-dev
+# weechat.conf -- WeeChat v0.3.1.1
 #
 
 [debug]
@@ -9,13 +9,13 @@ command_after_plugins = ""
 command_before_plugins = ""
 display_logo = on
 display_version = on
+weechat_slogan = "the geekiest chat client!"
 
 [look]
 buffer_notify_default = highlight
 buffer_time_format = "%H:%M"
 color_nicks_number = 6
 color_real_white = off
-command_chars = ""
 day_change = off
 day_change_time_format = "%a, %d %b %Y"
 highlight = ""
@@ -45,14 +45,12 @@ prefix_network = "━━"
 prefix_quit = "←"
 prefix_suffix = "│"
 read_marker = line
-read_marker_always_show = off
 save_config_on_exit = off
 save_layout_on_exit = none
 scroll_amount = 3
 scroll_page_percent = 100
 search_text_not_found_alert = on
 set_title = on
-time_format = "%a, %d %b %Y %T"
 
 [color]
 bar_more = lightmagenta
@@ -97,7 +95,7 @@ input_actions = lightgreen
 input_text_not_found = red
 nicklist_away = brown
 nicklist_group = green
-nicklist_offline = blue
+nicklist_more = lightmagenta
 nicklist_prefix1 = lightgreen
 nicklist_prefix2 = lightmagenta
 nicklist_prefix3 = yellow
