vim: add go syntax highlight
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -251,7 +251,7 @@ window = "17;15;0;0;perl;highmon"
 window = "18;14;0;0;irc;bitlbee.identica"
 window = "19;9;50;0;-;-"
 window = "20;19;0;0;irc;foonetic.#xkcd"
-window = "21;19;0;0;irc;foonetic.#xkcd-signal"
+window = "21;19;0;0;irc;freenode.#vim"
 
 [notify]
 highmon = none
