sysconfig.desktop: update
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.sysconfig/desktop/init.conf
+++ b/.sysconfig/desktop/init.conf
@@ -56,7 +56,7 @@ sysinit3(){
     encMount prompt data
 
     ## Start daemons we want to run
-    startbkgd sshd alsa mpd openntpd bitlbee crond samba
+    startbkgd sshd alsa mpd openntpd crond samba
 
     # Remove useless modules
     modprobe -r saa7134_alsa
@@ -64,6 +64,9 @@ sysinit3(){
 
     # Map caps to escape
     (echo `dumpkeys |grep -i keymaps`; echo keycode 58 = Escape) |loadkeys 
+
+    # Start mail sync daemon
+    su archlucas --command="/home/archlucas/bin/syncMail" &>/dev/null &
 }
 
 # sysinit5: called when runlevel 5 is reached
