vim: remove buftabs
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -30,6 +30,7 @@ perl.chanmon.irc.quakenet.org.#st4gr5 = "on"
 perl.chanmon.nick_prefix = "<"
 perl.chanmon.nick_suffix = ">"
 perl.chanmon.oftc.#awesome = "on"
+perl.chanmon.oftc.#blablatestbla = "on"
 perl.chanmon.oftc.#heresy = "on"
 perl.chanmon.quakenet.#st4gr5 = "on"
 perl.chanmon.rizon.#dlqct = "on"
