--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -354,7 +354,7 @@ meta-meta2-A = "/buffer -1"
 meta-meta2-B = "/buffer +1"
 meta-meta2-C = "/buffer +1"
 meta-meta2-D = "/buffer -1"
-meta-a = "/input jump_smart"
+meta-a = "/a"
 meta-b = "/window page_up"
 meta-cc = "/input delete_line"
 meta-d = "/input delete_next_word"
