--- a/.weechat/alias.conf
+++ b/.weechat/alias.conf
@@ -1,5 +1,5 @@
 #
-# alias.conf -- WeeChat v0.3.1.1
+# alias.conf -- WeeChat v0.3.2
 #
 
 [cmd]
@@ -31,3 +31,5 @@ WC = "window merge"
 WI = "whois"
 WII = "whois $1 $1"
 WW = "whowas"
+
+[completion]
