mh-feed-update: lock seen file
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -269,6 +269,7 @@ perl.highmon = none
 irc_smart = on;*;irc_smart_filter;*
 irc_mode = on;*;*;Mode #.* \[
 redent = on;irc.bitlbee.identica;*;\(\( \|^\)R[TD]\([: ]\|$\)\|♻\|♺\)
+github_leave = on;irc.oftc.#heresy;*;←\tgithub
 
 [key]
 ctrl-? = "/input delete_previous_char"
