vim: add conqueterm
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -10,6 +10,9 @@ perl.chanmon.bitlbee.&bitlbee = "on"
 perl.chanmon.bitlbee.&chat_000 = "on"
 perl.chanmon.bitlbee.&chat_001 = "on"
 perl.chanmon.bitlbee.&chat_002 = "on"
+perl.chanmon.bitlbee.&chat_003 = "on"
+perl.chanmon.bitlbee.&chat_004 = "on"
+perl.chanmon.bitlbee.&chat_005 = "on"
 perl.chanmon.coldfront.#achron = "on"
 perl.chanmon.color_buf = "on"
 perl.chanmon.dynamic = "on"
@@ -32,6 +35,7 @@ perl.chanmon.nick_suffix = ">"
 perl.chanmon.oftc.#awesome = "on"
 perl.chanmon.oftc.#blablatestbla = "on"
 perl.chanmon.oftc.#heresy = "on"
+perl.chanmon.oftc.#st4gr5 = "on"
 perl.chanmon.quakenet.#st4gr5 = "on"
 perl.chanmon.rizon.#dlqct = "on"
 perl.chanmon.rizon.#doremi = "on"
