sysconfig.desktop: update
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.sysconfig/desktop/init.conf
+++ b/.sysconfig/desktop/init.conf
@@ -56,7 +56,13 @@ sysinit3(){
     encMount prompt data
 
     ## Start daemons we want to run
-    startbkgd sshd alsa mpd openntpd crond samba
+    startbkgd alsa mpd openntpd samba
+
+    ## Start ssh
+    /usr/sbin/sshd
+
+    # Start cron
+    crond -L /var/log/crond.log
 
     # Remove useless modules
     modprobe -r saa7134_alsa
