--- a/.sysconfig/desktop/smb.conf
+++ b/.sysconfig/desktop/smb.conf
@@ -6,6 +6,7 @@ security = share
 log file = /var/log/samba/%m.log
 max log size = 50
 dns proxy = no
+max open files = 10240
 
 [fotos]
 path = /data/others/fotos
@@ -14,6 +15,13 @@ browsable = yes
 public = yes
 writable = yes
 guest ok = yes
+
+[anime]
+path = /data/anime
+available = yes
+browsable = yes
+public = yes
+writable = no
 
 [series]
 path = /data/series
@@ -35,4 +43,20 @@ available = yes
 browsable = yes
 public = yes
 writable = yes
+guest ok = yes
+
+[winedrive]
+path = /data/winedrive
+available = yes
+browsable = yes
+public = yes
+writable = no
+guest ok = yes
+
+[games]
+path = /data/games
+available = yes
+browsable = yes
+public = yes
+writable = no
 guest ok = yes
