update some stuff
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -27,6 +27,7 @@ perl.chanmon.freenode.#intovps = "on"
 perl.chanmon.freenode.#lojban = "on"
 perl.chanmon.freenode.#newsbeuter = "on"
 perl.chanmon.freenode.#python = "on"
+perl.chanmon.freenode.#shadow = "on"
 perl.chanmon.freenode.#vim = "on"
 perl.chanmon.freenode.#vimperator = "on"
 perl.chanmon.irc.quakenet.org.#st4gr5 = "on"
