--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -24,6 +24,7 @@ perl.chanmon.freenode.#anime = "on"
 perl.chanmon.freenode.#archlinux = "on"
 perl.chanmon.freenode.#archlinux-offtopic = "off"
 perl.chanmon.freenode.#intovps = "on"
+perl.chanmon.freenode.#lighttpd = "on"
 perl.chanmon.freenode.#lojban = "on"
 perl.chanmon.freenode.#newsbeuter = "on"
 perl.chanmon.freenode.#python = "on"
