--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -145,17 +145,17 @@ hi HintElem none: none;
 hi HintActive none: none;
 
 " Statusbar and commandline styling
-hi StatusLine background: #141414; color: #9FBC00; font-family: terminus; font-size: 10pt; font-weight: normal;
-hi StatusLineBroken background: #1a1414; color: #9FBC00; font-family: terminus; font-size: 10pt; font-weight: normal;
-hi StatusLineExtended background: #141a14; color: #9FBC00; font-family: terminus; font-size: 10pt; font-weight: normal;
-hi StatusLineSecure background: #14141a; color: #9FBC00; font-family: terminus; font-size: 10pt; font-weight: normal;
+hi StatusLine background: #141414; color: #9FBC00; font-family: terminus; font-size: 12px; font-weight: normal;
+hi StatusLineBroken background: #1a1414; color: #9FBC00; font-family: terminus; font-size: 12px; font-weight: normal;
+hi StatusLineExtended background: #141a14; color: #9FBC00; font-family: terminus; font-size: 12px; font-weight: normal;
+hi StatusLineSecure background: #14141a; color: #9FBC00; font-family: terminus; font-size: 12px; font-weight: normal;
 
-hi CmdLine height: 0px; padding: 0px; font-family: terminus; font-size: 10pt; font-weight: normal; color: white; background: #141414;
+hi CmdLine height: 0px; padding: 0px; font-family: terminus; font-size: 12px; font-weight: normal; color: white; background: #141414;
 hi Normal background: #141414; color: white;
 hi Question background: #141414; color: white;
 
 " Completion colors from zenburn
-hi CompDesc             color: #d0d0d0; width: 50%;font-size: 10pt;
+hi CompDesc             color: #d0d0d0; width: 50%;font-size: 12px;
 hi CompGroup:not(:first-of-type)    margin-top: .5em;
 hi CompIcon             width: 16px; min-width: 16px; display: inline-block; margin-right: .5ex;
 hi CompIcon>img         max-width: 16px; max-height: 16px; vertical-align: middle;
@@ -167,7 +167,7 @@ hi CompLess::after      content: "\2303" /* Unicode up arrowhead */
 hi CompMore             text-align: center; height: .5ex; line-height: .5ex; margin-bottom: -.5ex;
 hi CompMore::after      content: "\2304" /* Unicode down arrowhead */
 hi CompMsg              font-style: italic; margin-left: 16px;
-hi CompResult           width: 45%; overflow: hidden;font-size: 10pt; font-family: monospace; font-weight: normal;
+hi CompResult           width: 45%; overflow: hidden;font-size: 12px; font-family: monospace; font-weight: normal;
 hi CompTitle            color: #87af87; background: #242421; font-weight: bold;
 hi CompTitle>*          padding: 0 .5ex;
 
