tex: set textwidth
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -32,12 +32,14 @@ perl.chanmon.freenode.#shadow = "on"
 perl.chanmon.freenode.#vim = "on"
 perl.chanmon.freenode.#vimperator = "on"
 perl.chanmon.irc.quakenet.org.#st4gr5 = "on"
+perl.chanmon.logging = "off"
 perl.chanmon.nick_prefix = "<"
 perl.chanmon.nick_suffix = ">"
 perl.chanmon.oftc.#awesome = "on"
 perl.chanmon.oftc.#blablatestbla = "on"
 perl.chanmon.oftc.#heresy = "on"
 perl.chanmon.oftc.#st4gr5 = "on"
+perl.chanmon.output = "buffer"
 perl.chanmon.quakenet.#st4gr5 = "on"
 perl.chanmon.rizon.#dlqct = "on"
 perl.chanmon.rizon.#doremi = "on"
@@ -48,8 +50,10 @@ perl.highmon.alignment = "channel"
 perl.highmon.away_only = "off"
 perl.highmon.color_buf = "on"
 perl.highmon.hotlist_show = "off"
+perl.highmon.logging = "off"
 perl.highmon.nick_prefix = "<"
 perl.highmon.nick_suffix = ">"
+perl.highmon.output = "buffer"
 perl.highmon.short_names = "on"
 python.check_license = "on"
 python.colorize_nicks.blacklist_channels = ""
