vimperator.styles: update dukgo style
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.weechat/logger.conf
+++ b/.weechat/logger.conf
@@ -3,10 +3,10 @@
 #
 
 [look]
-backlog = 20
+backlog = 0
 
 [file]
-auto_log = on
+auto_log = off
 info_lines = off
 mask = "$server/$channel"
 name_lower_case = on
