--- a/.sysconfig/desktop/extlinux.conf
+++ b/.sysconfig/desktop/extlinux.conf
@@ -2,6 +2,8 @@ DEFAULT heresy
 LABEL heresy
   KERNEL /vmlinuz
   APPEND root=/dev/sda2 fastboot notsc vga=865 ro
+LABEL memtest
+  KERNEL /memtest
 
 TIMEOUT 0
 PROMPT 0
