--- a/.sysconfig/desktop/smb.conf
+++ b/.sysconfig/desktop/smb.conf
@@ -60,3 +60,19 @@ browsable = yes
 public = yes
 writable = no
 guest ok = yes
+
+[wii]
+path = /data/others/wiishared
+available = yes
+browsable = yes
+public = yes
+writable = no
+guest ok = yes
+
+[smsongs]
+path = /data/others/smsongs
+available = yes
+browsable = yes
+public = yes
+writable = yes
+guest ok = yes
