--- a/.htoprc
+++ b/.htoprc
@@ -16,7 +16,7 @@ header_margin=1
 detailed_cpu_time=0
 color_scheme=0
 delay=15
-left_meters=AllCPUs CPU 
-left_meter_modes=1 1 
-right_meters=Memory LoadAverage Tasks 
-right_meter_modes=1 2 2 
+left_meters=Memory CPU Tasks LoadAverage 
+left_meter_modes=1 1 2 2 
+right_meters=AllCPUs 
+right_meter_modes=1 
