--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -31,6 +31,9 @@ set editor=g
 " Vim editing in textareas
 set noinsertmode
 
+" Homerow hints
+set hintchars="aoeuhtns"
+
 " Leader
 let mapleader=","
 
