--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -84,6 +84,10 @@ noremap l 2l
 noremap J 6j
 noremap K 6k
 
+noremap s f
+noremap S F
+noremap e d
+
 " Remove tabs
 nmap <silent> <leader>D :removetabsright<CR>
 nmap <silent> <leader>d :removetabsleft<CR>
