Update many things.
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -152,7 +152,7 @@ input.conditions = ""
 input.filling_left_right = vertical
 input.filling_top_bottom = horizontal
 input.hidden = off
-input.items = "[hotlist],[lag],scroll,buffer_name>,[][input_paste],+(away),[input_search],input_text"
+input.items = "[hotlist],scroll,buffer_name>,[][input_paste],+(away),[input_search],input_text"
 input.position = bottom
 input.priority = 1000
 input.separator = off
@@ -210,33 +210,34 @@ buffer = "core;weechat;4"
 buffer = "irc;foonetic.#xkcd;5"
 buffer = "irc;server.freenode;6"
 buffer = "irc;server.coldfront;7"
-buffer = "irc;rizon.#DLQCT;8"
+buffer = "irc;server.stardock;8"
 buffer = "irc;server.oftc;9"
 buffer = "irc;server.foonetic;10"
 buffer = "irc;freenode.#vim;11"
-buffer = "irc;freenode.#newsbeuter;12"
+buffer = "irc;server.synirc;12"
 buffer = "irc;freenode.#anime;13"
 buffer = "irc;freenode.#vimperator;14"
-buffer = "irc;rizon.#doremi;15"
-buffer = "irc;freenode.#lojban;16"
-buffer = "irc;freenode.#archlinux;17"
-buffer = "irc;server.rizon;18"
-buffer = "perl;highmon;19"
+buffer = "irc;freenode.#lojban;15"
+buffer = "irc;freenode.#archlinux;16"
+buffer = "irc;server.rizon;17"
+buffer = "perl;highmon;18"
+buffer = "irc;stardock.#elemental;19"
 buffer = "perl;chanmon;20"
 buffer = "irc;oftc.#heresy;21"
 buffer = "irc;foonetic.#xkcd-signal;22"
 buffer = "irc;coldfront.#achron;23"
 buffer = "irc;freenode.#archlinux-offtopic;24"
-buffer = "irc;server.quakenet;25"
-buffer = "irc;quakenet.q@cserve.quakenet.org;26"
-buffer = "irc;quakenet.#st4gr5;27"
+buffer = "irc;synirc.#starruler;25"
+buffer = "irc;freenode.#Reddit;26"
+buffer = "irc;freenode.#wesnoth;27"
 buffer = "irc;freenode.#python;28"
-buffer = "irc;freenode.#intovps;29"
+buffer = "irc;bitlbee.daniel;29"
 buffer = "irc;bitlbee.identica;30"
+buffer = "irc;synirc.Naky;31"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
-window = "4;3;0;0;irc;oftc.#heresy"
+window = "4;3;0;0;irc;synirc.#starruler"
 window = "5;3;0;0;irc;oftc.#awesome"
 window = "6;2;50;0;-;-"
 window = "7;6;0;0;irc;freenode.#python"
