--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -85,5 +85,9 @@ python.identica.service = "identi.ca"
 python.identica.username = ""
 python.toggle_nicklist.action = "show"
 python.toggle_nicklist.buffers = "irc.bitlbee.&bitlbee"
+python.rss.display_current_buffer = "on"
+python.rss.display_weechat_buffer = "on"
+python.rss.feed = ""
+python.rss.refresh_delay = "300000"
 ruby.check_license = "on"
 tcl.check_license = "on"
