--- a/.weechat/irc_.conf
+++ b/.weechat/irc_.conf
@@ -71,7 +71,7 @@ autoreconnect = on
 autoreconnect_delay = 30
 autorejoin = off
 autorejoin_delay = 30
-command = "/msg nickserv identify ###"
+command = "/msg nickserv identify ...
 command_delay = 0
 ipv6 = off
 local_hostname = ""
@@ -90,171 +90,17 @@ ssl_verify = on
 username = "GGLucas"
 
 [server]
-freenode.addresses = "irc.freenode.net"
-freenode.proxy
-freenode.ipv6
-freenode.ssl
-freenode.ssl_cert
-freenode.ssl_dhkey_size
-freenode.ssl_verify
-freenode.password
-freenode.sasl_mechanism
-freenode.sasl_username
-freenode.sasl_password
-freenode.sasl_timeout
-freenode.autoconnect
-freenode.autoreconnect
-freenode.autoreconnect_delay
-freenode.nicks
-freenode.username
-freenode.realname
-freenode.local_hostname
-freenode.command
-freenode.command_delay
-freenode.autojoin = "#lojban,#archlinux,#archlinux-offtopic,#vim,#newsbeuter,#anime,#vimperator,#python,#intovps"
-freenode.autorejoin
-freenode.autorejoin_delay
-coldfront.addresses = "irc.coldfront.net"
-coldfront.proxy
-coldfront.ipv6
-coldfront.ssl
-coldfront.ssl_cert
-coldfront.ssl_dhkey_size
-coldfront.ssl_verify
-coldfront.password
-coldfront.sasl_mechanism
-coldfront.sasl_username
-coldfront.sasl_password
-coldfront.sasl_timeout
-coldfront.autoconnect
-coldfront.autoreconnect
-coldfront.autoreconnect_delay
-coldfront.nicks
-coldfront.username
-coldfront.realname
-coldfront.local_hostname
-coldfront.command
-coldfront.command_delay
-coldfront.autojoin = "#achron"
-coldfront.autorejoin
-coldfront.autorejoin_delay
-oftc.addresses = "irc.oftc.net"
-oftc.proxy
-oftc.ipv6
-oftc.ssl
-oftc.ssl_cert
-oftc.ssl_dhkey_size
-oftc.ssl_verify
-oftc.password
-oftc.sasl_mechanism
-oftc.sasl_username
-oftc.sasl_password
-oftc.sasl_timeout
-oftc.autoconnect
-oftc.autoreconnect
-oftc.autoreconnect_delay
-oftc.nicks
-oftc.username
-oftc.realname
-oftc.local_hostname
-oftc.command
-oftc.command_delay
-oftc.autojoin = "#awesome,#heresy"
-oftc.autorejoin
-oftc.autorejoin_delay
-foonetic.addresses = "irc.foonetic.net"
-foonetic.proxy
-foonetic.ipv6
-foonetic.ssl
-foonetic.ssl_cert
-foonetic.ssl_dhkey_size
-foonetic.ssl_verify
-foonetic.password
-foonetic.sasl_mechanism
-foonetic.sasl_username
-foonetic.sasl_password
-foonetic.sasl_timeout
-foonetic.autoconnect
-foonetic.autoreconnect
-foonetic.autoreconnect_delay
-foonetic.nicks
-foonetic.username
-foonetic.realname
-foonetic.local_hostname
-foonetic.command
-foonetic.command_delay
-foonetic.autojoin = "#xkcd,#xkcd-signal"
-foonetic.autorejoin
-foonetic.autorejoin_delay
-rizon.addresses = "irc.rizon.net"
-rizon.proxy
-rizon.ipv6
-rizon.ssl
-rizon.ssl_cert
-rizon.ssl_dhkey_size
-rizon.ssl_verify
-rizon.password
-rizon.sasl_mechanism
-rizon.sasl_username
-rizon.sasl_password
-rizon.sasl_timeout
-rizon.autoconnect
-rizon.autoreconnect
-rizon.autoreconnect_delay
-rizon.nicks
-rizon.username
-rizon.realname
-rizon.local_hostname
-rizon.command = "/msg nickserv identify ###; /join #DLQCT ###"
-rizon.command_delay
-rizon.autojoin = "#doremi"
-rizon.autorejoin
-rizon.autorejoin_delay
-bitlbee.addresses = "localhost"
-bitlbee.proxy
-bitlbee.ipv6
-bitlbee.ssl
-bitlbee.ssl_cert
-bitlbee.ssl_dhkey_size
-bitlbee.ssl_verify
-bitlbee.password
-bitlbee.sasl_mechanism
-bitlbee.sasl_username
-bitlbee.sasl_password
-bitlbee.sasl_timeout
-bitlbee.autoconnect
-bitlbee.autoreconnect
-bitlbee.autoreconnect_delay
-bitlbee.nicks
-bitlbee.username
-bitlbee.realname
-bitlbee.local_hostname
-bitlbee.command
-bitlbee.command_delay
-bitlbee.autojoin
-bitlbee.autorejoin
-bitlbee.autorejoin_delay
-quakenet.addresses = "irc.quakenet.org"
-quakenet.proxy
-quakenet.ipv6
-quakenet.ssl
-quakenet.ssl_cert
-quakenet.ssl_dhkey_size
-quakenet.ssl_verify
-quakenet.password
-quakenet.sasl_mechanism
-quakenet.sasl_username
-quakenet.sasl_password
-quakenet.sasl_timeout
-quakenet.autoconnect
-quakenet.autoreconnect
-quakenet.autoreconnect_delay
-quakenet.nicks
-quakenet.username
-quakenet.realname
-quakenet.local_hostname
-quakenet.command = "/query q@cserve.quakenet.org auth GGLucas ###; /join #st4gr5"
-quakenet.command_delay
-quakenet.autojoin = ""
-quakenet.autorejoin
-quakenet.autorejoin_delay
+freenode.addresses = "glacicle.org/7778"
+freenode.password = "GGLucas:...:freenode"
+bitlbee.addresses = "glacicle.org/7778"
+bitlbee.password = "GGLucas:...:bitlbee"
+oftc.addresses = "glacicle.org/7778"
+oftc.password = "GGLucas:...:oftc"
+foonetic.addresses = "glacicle.org/7778"
+foonetic.password = "GGLucas:...:foonetic"
+coldfront.addresses = "glacicle.org/7778"
+coldfront.password = "GGLucas:...:coldfront"
+stardock.addresses = "glacicle.org/7778"
+stardock.password = "GGLucas:...:stardock"
+slacked.addresses = "glacicle.org/7778"
+slacked.password = "GGLucas:...:slacked"
