--- a/.weechat/urlgrab.conf
+++ b/.weechat/urlgrab.conf
@@ -1,5 +1,5 @@
 #
-# urlgrab.conf -- WeeChat v0.3.3
+# urlgrab.conf -- weechat v0.3.4
 #
 
 [color]
@@ -13,9 +13,9 @@ color_url_selected = blue
 
 [default]
 historysize = 10
-localcmd = "fxs :0.0 '%s'"
+localcmd = "firefox %s"
 method = "local"
 output_main_buffer = on
-remotecmd = "bash -c "DISPLAY=:0.0 firefox %s""
+remotecmd = "ssh -x localhost -i ~/.ssh/id_rsa -C "export DISPLAY=":0.0" &&  firefox %s""
 time_format = "%H:%M:%S"
 url_log = "~/.weechat/urls.log"
