--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- WeeChat v0.3.2
+# weechat.conf -- weechat v0.3.4
 #
 
 [debug]
@@ -11,14 +11,16 @@ display_logo = on
 display_version = on
 
 [look]
+align_end_of_lines = message
 buffer_notify_default = highlight
 buffer_time_format = "%H:%M"
-color_nicks_number = 6
 color_real_white = off
 command_chars = ""
+confirm_quit = off
 day_change = off
 day_change_time_format = "%a, %d %b %Y"
 highlight = ""
+highlight_regex = ""
 hline_char = ""
 hotlist_names_count = 3
 hotlist_names_length = 0
@@ -26,6 +28,10 @@ hotlist_names_level = 8
 hotlist_names_merged_buffers = off
 hotlist_short_names = on
 hotlist_sort = group_time_asc
+hotlist_unique_numbers = on
+input_share = none
+input_share_overwrite = off
+input_undo_max = 32
 item_time_format = "%H:%M"
 jump_current_to_previous_buffer = on
 jump_previous_buffer_when_closing = on
@@ -35,6 +41,7 @@ paste_max_lines = 3
 prefix_action = "━━"
 prefix_align = right
 prefix_align_max = 10
+prefix_align_min = 0
 prefix_align_more = on
 prefix_buffer_align = right
 prefix_buffer_align_max = 10
@@ -54,6 +61,8 @@ search_text_not_found_alert = on
 set_title = on
 time_format = "%a, %d %b %Y %T"
 
+[palette]
+
 [color]
 bar_more = lightmagenta
 chat = default
@@ -65,16 +74,7 @@ chat_highlight = yellow
 chat_highlight_bg = magenta
 chat_host = magenta
 chat_nick = lightcyan
-chat_nick_color01 = lightblue
-chat_nick_color02 = lightmagenta
-chat_nick_color03 = green
-chat_nick_color04 = brown
-chat_nick_color05 = lightgreen
-chat_nick_color06 = lightcyan
-chat_nick_color07 = white
-chat_nick_color08 = white
-chat_nick_color09 = white
-chat_nick_color10 = white
+chat_nick_colors = "lightblue,lightmagenta,green,brown,lightgreen,lightcyan"
 chat_nick_other = cyan
 chat_nick_self = white
 chat_prefix_action = white
@@ -98,11 +98,6 @@ input_text_not_found = red
 nicklist_away = brown
 nicklist_group = green
 nicklist_offline = blue
-nicklist_prefix1 = lightgreen
-nicklist_prefix2 = lightmagenta
-nicklist_prefix3 = yellow
-nicklist_prefix4 = blue
-nicklist_prefix5 = brown
 separator = blue
 status_data_highlight = lightmagenta
 status_data_msg = yellow
@@ -111,6 +106,7 @@ status_data_private = lightgreen
 status_filter = green
 status_more = yellow
 status_name = white
+status_name_ssl = lightgreen
 status_number = yellow
 status_time = default
 
@@ -136,6 +132,7 @@ max_visited_buffers = 50
 
 [network]
 gnutls_ca_file = "%h/ssl/CAs.pem"
+gnutls_handshake_timeout = 30
 
 [plugin]
 autoload = "*"
@@ -218,27 +215,32 @@ buffer = "irc;server.synirc;12"
 buffer = "irc;freenode.#anime;13"
 buffer = "irc;freenode.#vimperator;14"
 buffer = "irc;freenode.#lojban;15"
-buffer = "irc;freenode.#archlinux;16"
-buffer = "irc;server.rizon;17"
-buffer = "perl;highmon;18"
+buffer = "perl;highmon;16"
+buffer = "irc;server.slacked;17"
+buffer = "irc;freenode.#archlinux;18"
 buffer = "irc;stardock.#elemental;19"
-buffer = "perl;chanmon;20"
+buffer = "irc;server.rizon;20"
 buffer = "irc;oftc.#heresy;21"
 buffer = "irc;foonetic.#xkcd-signal;22"
 buffer = "irc;coldfront.#achron;23"
-buffer = "irc;freenode.#archlinux-offtopic;24"
-buffer = "irc;synirc.#starruler;25"
+buffer = "perl;chanmon;24"
+buffer = "irc;oftc.NickServ;25"
 buffer = "irc;freenode.#Reddit;26"
 buffer = "irc;freenode.#wesnoth;27"
 buffer = "irc;freenode.#python;28"
-buffer = "irc;bitlbee.daniel;29"
-buffer = "irc;bitlbee.identica;30"
-buffer = "irc;synirc.Naky;31"
+buffer = "irc;slacked.#starruler;29"
+buffer = "irc;freenode.#archlinux-offtopic;30"
+buffer = "irc;bitlbee.identica;31"
+buffer = "irc;synirc.#starruler;32"
+buffer = "irc;freenode.#python-unregistered;33"
+buffer = "irc;freenode.##unavailable;34"
+buffer = "irc;freenode.#redditanime;35"
+buffer = "irc;slacked.#starruler-test;36"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
-window = "4;3;0;0;irc;synirc.#starruler"
-window = "5;3;0;0;irc;oftc.#awesome"
+window = "4;3;0;0;irc;slacked.#starruler"
+window = "5;3;0;0;irc;freenode.#redditanime"
 window = "6;2;50;0;-;-"
 window = "7;6;0;0;irc;freenode.#python"
 window = "8;6;0;0;irc;freenode.#archlinux"
@@ -267,10 +269,10 @@ irc.server.rizon = none
 perl.highmon = none
 
 [filter]
-irc_smart = on;*;irc_smart_filter;*
 irc_mode = on;*;*;Mode #.* \[
 redent = on;irc.bitlbee.identica;*;\(\( \|^\)R[TD]\([: ]\|$\)\|♻\|♺\)
 github_leave = on;irc.oftc.#heresy;*;←\tgithub
+irc_smart = on;*^(#starruler)*;irc_smart_filter;*
 
 [key]
 ctrl-? = "/input delete_previous_char"
