--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -1,5 +1,5 @@
 #
-# plugins.conf -- WeeChat v0.3.3
+# plugins.conf -- weechat v0.3.4
 #
 
 [var]
@@ -83,11 +83,11 @@ python.identica.re = "^(\[[0-9][0-9]:[0-9][0-9]\] )?(?P<update>\w+)(?P<separator
 python.identica.scheme = "https"
 python.identica.service = "identi.ca"
 python.identica.username = ""
-python.toggle_nicklist.action = "show"
-python.toggle_nicklist.buffers = "irc.bitlbee.&bitlbee"
 python.rss.display_current_buffer = "on"
 python.rss.display_weechat_buffer = "on"
-python.rss.feed = ""
-python.rss.refresh_delay = "300000"
+python.rss.feed = "http://forums.blind-mind.com/index.php?type=rss;action=.xml"
+python.rss.refresh_delay = "10000"
+python.toggle_nicklist.action = "show"
+python.toggle_nicklist.buffers = "irc.bitlbee.&bitlbee"
 ruby.check_license = "on"
 tcl.check_license = "on"
