update system config
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.sysconfig/desktop/extlinux.conf
+++ b/.sysconfig/desktop/extlinux.conf
@@ -1,7 +1,11 @@
-DEFAULT heresy
-LABEL heresy
-  KERNEL /vmlinuz
-  APPEND root=/dev/sda2 fastboot notsc vga=865 ro
+DEFAULT arch
+LABEL arch
+  KERNEL /vmlinuz26
+  APPEND initrd=/kernel26.img root=/dev/sda2 fastboot notsc vga=865 ro
+#DEFAULT heresy
+#LABEL heresy
+#  KERNEL /vmlinuz
+#  APPEND root=/dev/sda2 fastboot notsc vga=865 ro
 LABEL memtest
   KERNEL /memtest
 
