--- a/.sysconfig/desktop/smb.conf
+++ b/.sysconfig/desktop/smb.conf
@@ -35,7 +35,7 @@ path = /data/films
 available = yes
 browsable = yes
 public = yes
-writable = no
+writable = yes
 
 [shared]
 path = /data/others/shared
@@ -76,3 +76,13 @@ browsable = yes
 public = yes
 writable = yes
 guest ok = yes
+
+[starruler]
+path = /home/archlucas/starruler
+available = yes
+browsable = yes
+public = yes
+writable = yes
+guest ok = yes
+hosts deny = ALL
+hosts allow = 192.168.1.200
