update pentadactyl, laptop hostname
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.pentadactylrc
+++ b/.pentadactylrc
@@ -51,7 +51,7 @@ nmap <silent> V :tabmove -1<CR>
 nmap <silent> W :tabmove +1<CR>
 
 " Toggle userstyles/userscripts
-nmap <silent> <Leader>s :styletoggle<CR>:styledisable -name global<CR>
+nmap <silent> <Leader>s :styletoggle!<CR>:styledisable -name global<CR>
 nmap <silent> <Leader>h :styletoggle -name global<CR>
 nmap <silent> <Leader>S :loaduserstyles<CR>:styledisable -name global<CR>
 nmap <silent> <Leader>g :gmset!<CR>
