Update preciseJump and left/right text object plugins.
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.pentadactylrc
+++ b/.pentadactylrc
@@ -80,6 +80,7 @@ noremap e d
 noremap ;s g;b
 noremap ;t ;y
 noremap ;n ;i
+noremap ;N ;I
 
 " Remove tabs
 nmap <silent> <leader>D :removetabsright<CR>
